--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./node_modules/.bin/webpack",
+    "webpack": "webpack --watch"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +24,9 @@
     "react-dom": "^15.3.0",
     "react-router": "^2.6.1",
     "webpack": "^1.13.1"
-  }
+  },
+  "engines": {
+  "node": "6.3.0",
+  "npm": "3.10.3"
+}
 }
