--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "flux": "^2.1.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-modal": "^1.4.0",
     "react-router": "^2.6.1",
     "webpack": "^1.13.1"
   },
   "engines": {
-  "node": "6.3.0",
-  "npm": "3.10.3"
-}
+    "node": "6.3.0",
+    "npm": "3.10.3"
+  }
 }
