--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./node_modules/.bin/webpack",
-    "webpack": "webpack --watch"
+    "webpack": "webpack --watch",
+    "heoku-postbuild": "webpack --config webpack.config.prod.js"
   },
   "keywords": [],
   "author": "",
