--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^15.3.0",
     "react-modal": "^1.4.0",
     "react-router": "^2.6.1",
+    "react-scroll": "^1.4.0",
     "webpack": "^1.13.1"
   },
   "engines": {
