--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,4 @@ app/assets/javascripts/bundle.js.map
 
 # Ignore application configuration
 /config/application.yml
-/config/secrets.yml
+config/secrets.yml
