--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,4 @@ app/assets/javascripts/bundle.js.map
 # Ignore application configuration
 /config/application.yml
 config/secrets.yml
-/config/secrets.yml
+./config/secrets.yml
